--- a/src/presentacion/RegistrarTipoMovimiento.form
+++ b/src/presentacion/RegistrarTipoMovimiento.form
@@ -166,7 +166,7 @@
                               <Component id="txtTipoCodigo" min="-2" pref="29" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace pref="27" max="32767" attributes="0"/>
+                      <EmptySpace pref="26" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="lblAccion" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
                           <Component id="txtDescripcion" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
@@ -225,6 +225,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="txtTipoCodigo">
+              <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtTipoCodigoActionPerformed"/>
               </Events>
@@ -254,6 +257,7 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Registrar"/>
                 <Property name="toolTipText" type="java.lang.String" value="Registrar"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegistrar2ActionPerformed"/>
@@ -267,6 +271,7 @@
                     <StringItem index="1" value="Salida"/>
                   </StringArray>
                 </Property>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
@@ -281,12 +286,16 @@
                     <StringItem index="2" value="Cancelado"/>
                   </StringArray>
                 </Property>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
             </Component>
             <Component class="javax.swing.JTextField" name="txtDescripcion">
+              <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
