--- a/src/presentacion/RegistrarTipoMovimiento.form
+++ b/src/presentacion/RegistrarTipoMovimiento.form
@@ -166,7 +166,7 @@
                               <Component id="txtTipoCodigo" min="-2" pref="29" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace pref="26" max="32767" attributes="0"/>
+                      <EmptySpace pref="27" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="lblAccion" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
                           <Component id="txtDescripcion" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
@@ -230,6 +230,7 @@
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtTipoCodigoActionPerformed"/>
+                <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtTipoCodigoKeyTyped"/>
               </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnNuevo2">
