--- a/src/presentacion/InfRecargarSaldoEmpleado.form
+++ b/src/presentacion/InfRecargarSaldoEmpleado.form
@@ -234,6 +234,7 @@
                 <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtSaldoRecargadoActionPerformed"/>
                 <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtSaldoRecargadoKeyTyped"/>
               </Events>
               <Constraints>
